--- a/http-api/src/public/admin.html
+++ b/http-api/src/public/admin.html
@@ -15,7 +15,6 @@
 
         <nav class="admin-nav">
             <button class="nav-btn active" data-section="users">Users</button>
-            <button class="nav-btn" data-section="settings">Settings</button>
         </nav>
 
         <main class="admin-content">
@@ -28,53 +27,7 @@
                 <div id="usersList" class="users-list"></div>
             </section>
 
-            <!-- Settings Section -->
-            <section id="settingsSection" class="admin-section">
-                <div class="section-header">
-                    <h2>System Settings</h2>
-                </div>
-                <form id="settingsForm" class="settings-form">
-                    <div class="form-group">
-                        <label for="defaultRetentionDays">Default Retention Period (days)</label>
-                        <input type="number" id="defaultRetentionDays" name="defaultRetentionDays" min="1" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registrationEnabled">User Registration</label>
-                        <select id="registrationEnabled" name="registrationEnabled">
-                            <option value="true">Enabled</option>
-                            <option value="false">Disabled</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="s3Type">S3 Storage Type</label>
-                        <select id="s3Type" name="s3Type">
-                            <option value="none">None</option>
-                            <option value="local">Local (MinIO)</option>
-                            <option value="remote">Remote S3</option>
-                            <option value="database">Database (Base64)</option>
-                        </select>
-                    </div>
-                    <div id="s3Config" style="display: none;">
-                        <div class="form-group">
-                            <label for="s3Endpoint">S3 Endpoint</label>
-                            <input type="text" id="s3Endpoint" name="s3Endpoint" placeholder="http://localhost:9000">
-                        </div>
-                        <div class="form-group">
-                            <label for="s3AccessKey">Access Key</label>
-                            <input type="text" id="s3AccessKey" name="s3AccessKey">
-                        </div>
-                        <div class="form-group">
-                            <label for="s3SecretKey">Secret Key</label>
-                            <input type="password" id="s3SecretKey" name="s3SecretKey">
-                        </div>
-                        <div class="form-group">
-                            <label for="s3Bucket">Bucket Name</label>
-                            <input type="text" id="s3Bucket" name="s3Bucket" value="attachments">
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Save Settings</button>
-                </form>
-            </section>
+            <!-- Settings Section removed (configuration is env-based) -->
         </main>
     </div>
 
