--- a/http-api/src/public/index.html
+++ b/http-api/src/public/index.html
@@ -15,8 +15,8 @@
             <!-- Login Form -->
             <form id="loginForm" class="auth-form active">
                 <div class="form-group">
-                    <label for="loginEmail">Email</label>
-                    <input type="email" id="loginEmail" name="email" required placeholder="username@domain.com">
+                    <label for="loginUsername">Username</label>
+                    <input type="text" id="loginUsername" name="username" required placeholder="yourname">
                 </div>
                 <div class="form-group">
                     <label for="loginPassword">Password</label>
@@ -29,8 +29,8 @@
             <!-- Registration Form -->
             <form id="registerForm" class="auth-form" style="display: none;">
                 <div class="form-group">
-                    <label for="registerEmail">Email</label>
-                    <input type="email" id="registerEmail" name="email" required placeholder="username@domain.com">
+                    <label for="registerUsername">Username</label>
+                    <input type="text" id="registerUsername" name="username" required placeholder="yourname">
                 </div>
                 <div class="form-group">
                     <label for="registerPassword">Password</label>
